infrastructure/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-oc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-oc
  template:
    metadata:
      labels:
        app: vite-oc
    spec:
      containers:
        - name: vite-oc
          image: image-registry.openshift-image-registry.svc:5000/lmagniez03-dev/vite-oc:latest
          ports:
            - containerPort: 3000
