infrastructure/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-oc
  labels:
    app: vite-oc
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: vite-oc
